src/parser.output
Terminals unused in grammar

    "bool"
    "."


State 90 conflicts: 14 shift/reduce
State 134 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program "end of file"

    1 Program: FoDList

    2 FoDList: FuncDefn
    3        | FoDList FuncDefn
    4        | DeclStmt
    5        | FoDList DeclStmt

    6 FuncDefn: Type "identifier" "(" FormalList ")" "{" StmtList "}"
    7         | Type "identifier" "(" FormalList ")" ";"

    8 FormalList: %empty
    9           | ParameterList

   10 ParameterList: Type "identifier"
   11              | Type "identifier" "," ParameterList

   12 Type: "int"
   13     | "const" "int"

   14 StmtList: %empty
   15         | StmtList Stmt
   16         | StmtList DeclStmt

   17 Stmt: ReturnStmt
   18     | ExprStmt
   19     | IfStmt
   20     | WhileStmt
   21     | CompStmt
   22     | ForStmt
   23     | "break" ";"
   24     | "continue" ";"
   25     | ";"

   26 CompStmt: "{" StmtList "}"

   27 WhileStmt: "while" "(" Expr ")" Stmt

   28 ForStmt: "for" "(" ForExpr ";" ForExpr ";" ForExpr ")" Stmt
   29        | "for" "(" DeclStmt ForExpr ";" ForExpr ")" Stmt
   30        | "do" Stmt "while" "(" Expr ")" ";"

   31 ForExpr: %empty
   32        | Expr

   33 IfStmt: "if" "(" Expr ")" Stmt
   34       | "if" "(" Expr ")" Stmt "else" Stmt

   35 DeclStmt: Type "identifier" ";"
   36         | Type "identifier" "=" Expr ";"
   37         | Type "identifier" Index ";"

   38 Index: "[" "iconst" "]" Index
   39      | "[" "iconst" "]"

   40 ReturnStmt: "return" Expr ";"

   41 ExprStmt: Expr ";"

   42 VarRef: "identifier"
   43       | "identifier" IndexExpr

   44 LvalueExpr: VarRef
   45           | VarRef "=" Expr

   46 IndexExpr: "[" Expr "]" IndexExpr
   47          | "[" Expr "]"

   48 ExprList: Expr
   49         | Expr "," ExprList

   50 Expr: "iconst"
   51     | LvalueExpr
   52     | "identifier" "(" ExprList ")"
   53     | "identifier" "(" ")"
   54     | "(" Expr ")"
   55     | Expr "!=" Expr
   56     | Expr "==" Expr
   57     | Expr ">=" Expr
   58     | Expr ">" Expr
   59     | Expr "<=" Expr
   60     | Expr "<" Expr
   61     | Expr "&&" Expr
   62     | Expr "||" Expr
   63     | Expr "+" Expr
   64     | Expr "-" Expr
   65     | Expr "*" Expr
   66     | Expr "/" Expr
   67     | Expr "%" Expr
   68     | Expr "?" Expr ":" Expr
   69     | "-" Expr
   70     | "~" Expr
   71     | "!" Expr


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "bool" (258)
    "int" (259) 12 13
    "return" (260) 40
    "if" (261) 33 34
    "else" (262) 34
    "do" (263) 30
    "while" (264) 27 30
    "for" (265) 28 29
    "break" (266) 23
    "continue" (267) 24
    "==" (268) 56
    "!=" (269) 55
    "&&" (270) 61
    "||" (271) 62
    "<=" (272) 59
    ">=" (273) 57
    "+" (274) 63
    "-" (275) 64 69
    "*" (276) 65
    "/" (277) 66
    "%" (278) 67
    "<" (279) 60
    ">" (280) 58
    ":" (281) 68
    ";" (282) 7 23 24 25 28 29 30 35 36 37 40 41
    "!" (283) 71
    "~" (284) 70
    "," (285) 11 49
    "." (286)
    "=" (287) 36 45
    "?" (288) 68
    "(" (289) 6 7 27 28 29 30 33 34 52 53 54
    ")" (290) 6 7 27 28 29 30 33 34 52 53 54
    "[" (291) 38 39 46 47
    "]" (292) 38 39 46 47
    "{" (293) 6 26
    "}" (294) 6 26
    "const" (295) 13
    "identifier" <std::string> (296) 6 7 10 11 35 36 37 42 43 52 53
    "iconst" <int> (297) 38 39 50
    NEG (298)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    Program <mind::ast::Program* > (45)
        on left: 1
        on right: 0
    FoDList <mind::ast::Program* > (46)
        on left: 2 3 4 5
        on right: 1 3 5
    FuncDefn <mind::ast::FuncDefn* > (47)
        on left: 6 7
        on right: 2 3
    FormalList <mind::ast::VarList* > (48)
        on left: 8 9
        on right: 6 7
    ParameterList <mind::ast::VarList* > (49)
        on left: 10 11
        on right: 9 11
    Type <mind::ast::Type*> (50)
        on left: 12 13
        on right: 6 7 10 11 35 36 37
    StmtList <mind::ast::StmtList*> (51)
        on left: 14 15 16
        on right: 6 15 16 26
    Stmt <mind::ast::Statement*> (52)
        on left: 17 18 19 20 21 22 23 24 25
        on right: 15 27 28 29 30 33 34
    CompStmt <mind::ast::Statement*> (53)
        on left: 26
        on right: 21
    WhileStmt <mind::ast::Statement*> (54)
        on left: 27
        on right: 20
    ForStmt <mind::ast::Statement*> (55)
        on left: 28 29 30
        on right: 22
    ForExpr <mind::ast::Expr*> (56)
        on left: 31 32
        on right: 28 29
    IfStmt <mind::ast::Statement*> (57)
        on left: 33 34
        on right: 19
    DeclStmt <mind::ast::Statement*> (58)
        on left: 35 36 37
        on right: 4 5 16 29
    Index <mind::ast::DimList* > (59)
        on left: 38 39
        on right: 37 38
    ReturnStmt <mind::ast::Statement*> (60)
        on left: 40
        on right: 17
    ExprStmt <mind::ast::Statement*> (61)
        on left: 41
        on right: 18
    VarRef <mind::ast::VarRef*> (62)
        on left: 42 43
        on right: 44 45
    LvalueExpr <mind::ast::Expr*> (63)
        on left: 44 45
        on right: 51
    IndexExpr <mind::ast::IndexExpr*> (64)
        on left: 46 47
        on right: 43 46
    ExprList <mind::ast::ExprList* > (65)
        on left: 48 49
        on right: 49 52
    Expr <mind::ast::Expr*> (66)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 27 30 32 33 34 36 40 41 45 46 47 48 49 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71


State 0

    0 $accept: • Program "end of file"

    "int"    shift, and go to state 1
    "const"  shift, and go to state 2

    Program   go to state 3
    FoDList   go to state 4
    FuncDefn  go to state 5
    Type      go to state 6
    DeclStmt  go to state 7


State 1

   12 Type: "int" •

    $default  reduce using rule 12 (Type)


State 2

   13 Type: "const" • "int"

    "int"  shift, and go to state 8


State 3

    0 $accept: Program • "end of file"

    "end of file"  shift, and go to state 9


State 4

    1 Program: FoDList •
    3 FoDList: FoDList • FuncDefn
    5        | FoDList • DeclStmt

    "int"    shift, and go to state 1
    "const"  shift, and go to state 2

    $default  reduce using rule 1 (Program)

    FuncDefn  go to state 10
    Type      go to state 6
    DeclStmt  go to state 11


State 5

    2 FoDList: FuncDefn •

    $default  reduce using rule 2 (FoDList)


State 6

    6 FuncDefn: Type • "identifier" "(" FormalList ")" "{" StmtList "}"
    7         | Type • "identifier" "(" FormalList ")" ";"
   35 DeclStmt: Type • "identifier" ";"
   36         | Type • "identifier" "=" Expr ";"
   37         | Type • "identifier" Index ";"

    "identifier"  shift, and go to state 12


State 7

    4 FoDList: DeclStmt •

    $default  reduce using rule 4 (FoDList)


State 8

   13 Type: "const" "int" •

    $default  reduce using rule 13 (Type)


State 9

    0 $accept: Program "end of file" •

    $default  accept


State 10

    3 FoDList: FoDList FuncDefn •

    $default  reduce using rule 3 (FoDList)


State 11

    5 FoDList: FoDList DeclStmt •

    $default  reduce using rule 5 (FoDList)


State 12

    6 FuncDefn: Type "identifier" • "(" FormalList ")" "{" StmtList "}"
    7         | Type "identifier" • "(" FormalList ")" ";"
   35 DeclStmt: Type "identifier" • ";"
   36         | Type "identifier" • "=" Expr ";"
   37         | Type "identifier" • Index ";"

    ";"  shift, and go to state 13
    "="  shift, and go to state 14
    "("  shift, and go to state 15
    "["  shift, and go to state 16

    Index  go to state 17


State 13

   35 DeclStmt: Type "identifier" ";" •

    $default  reduce using rule 35 (DeclStmt)


State 14

   36 DeclStmt: Type "identifier" "=" • Expr ";"

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 26


State 15

    6 FuncDefn: Type "identifier" "(" • FormalList ")" "{" StmtList "}"
    7         | Type "identifier" "(" • FormalList ")" ";"

    "int"    shift, and go to state 1
    "const"  shift, and go to state 2

    $default  reduce using rule 8 (FormalList)

    FormalList     go to state 27
    ParameterList  go to state 28
    Type           go to state 29


State 16

   38 Index: "[" • "iconst" "]" Index
   39      | "[" • "iconst" "]"

    "iconst"  shift, and go to state 30


State 17

   37 DeclStmt: Type "identifier" Index • ";"

    ";"  shift, and go to state 31


State 18

   69 Expr: "-" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 32


State 19

   71 Expr: "!" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 33


State 20

   70 Expr: "~" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 34


State 21

   54 Expr: "(" • Expr ")"

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 35


State 22

   42 VarRef: "identifier" •
   43       | "identifier" • IndexExpr
   52 Expr: "identifier" • "(" ExprList ")"
   53     | "identifier" • "(" ")"

    "("  shift, and go to state 36
    "["  shift, and go to state 37

    $default  reduce using rule 42 (VarRef)

    IndexExpr  go to state 38


State 23

   50 Expr: "iconst" •

    $default  reduce using rule 50 (Expr)


State 24

   44 LvalueExpr: VarRef •
   45           | VarRef • "=" Expr

    "="  shift, and go to state 39

    $default  reduce using rule 44 (LvalueExpr)


State 25

   51 Expr: LvalueExpr •

    $default  reduce using rule 51 (Expr)


State 26

   36 DeclStmt: Type "identifier" "=" Expr • ";"
   55 Expr: Expr • "!=" Expr
   56     | Expr • "==" Expr
   57     | Expr • ">=" Expr
   58     | Expr • ">" Expr
   59     | Expr • "<=" Expr
   60     | Expr • "<" Expr
   61     | Expr • "&&" Expr
   62     | Expr • "||" Expr
   63     | Expr • "+" Expr
   64     | Expr • "-" Expr
   65     | Expr • "*" Expr
   66     | Expr • "/" Expr
   67     | Expr • "%" Expr
   68     | Expr • "?" Expr ":" Expr

    "=="  shift, and go to state 40
    "!="  shift, and go to state 41
    "&&"  shift, and go to state 42
    "||"  shift, and go to state 43
    "<="  shift, and go to state 44
    ">="  shift, and go to state 45
    "+"   shift, and go to state 46
    "-"   shift, and go to state 47
    "*"   shift, and go to state 48
    "/"   shift, and go to state 49
    "%"   shift, and go to state 50
    "<"   shift, and go to state 51
    ">"   shift, and go to state 52
    ";"   shift, and go to state 53
    "?"   shift, and go to state 54


State 27

    6 FuncDefn: Type "identifier" "(" FormalList • ")" "{" StmtList "}"
    7         | Type "identifier" "(" FormalList • ")" ";"

    ")"  shift, and go to state 55


State 28

    9 FormalList: ParameterList •

    $default  reduce using rule 9 (FormalList)


State 29

   10 ParameterList: Type • "identifier"
   11              | Type • "identifier" "," ParameterList

    "identifier"  shift, and go to state 56


State 30

   38 Index: "[" "iconst" • "]" Index
   39      | "[" "iconst" • "]"

    "]"  shift, and go to state 57


State 31

   37 DeclStmt: Type "identifier" Index ";" •

    $default  reduce using rule 37 (DeclStmt)


State 32

   55 Expr: Expr • "!=" Expr
   56     | Expr • "==" Expr
   57     | Expr • ">=" Expr
   58     | Expr • ">" Expr
   59     | Expr • "<=" Expr
   60     | Expr • "<" Expr
   61     | Expr • "&&" Expr
   62     | Expr • "||" Expr
   63     | Expr • "+" Expr
   64     | Expr • "-" Expr
   65     | Expr • "*" Expr
   66     | Expr • "/" Expr
   67     | Expr • "%" Expr
   68     | Expr • "?" Expr ":" Expr
   69     | "-" Expr •

    $default  reduce using rule 69 (Expr)


State 33

   55 Expr: Expr • "!=" Expr
   56     | Expr • "==" Expr
   57     | Expr • ">=" Expr
   58     | Expr • ">" Expr
   59     | Expr • "<=" Expr
   60     | Expr • "<" Expr
   61     | Expr • "&&" Expr
   62     | Expr • "||" Expr
   63     | Expr • "+" Expr
   64     | Expr • "-" Expr
   65     | Expr • "*" Expr
   66     | Expr • "/" Expr
   67     | Expr • "%" Expr
   68     | Expr • "?" Expr ":" Expr
   71     | "!" Expr •

    $default  reduce using rule 71 (Expr)


State 34

   55 Expr: Expr • "!=" Expr
   56     | Expr • "==" Expr
   57     | Expr • ">=" Expr
   58     | Expr • ">" Expr
   59     | Expr • "<=" Expr
   60     | Expr • "<" Expr
   61     | Expr • "&&" Expr
   62     | Expr • "||" Expr
   63     | Expr • "+" Expr
   64     | Expr • "-" Expr
   65     | Expr • "*" Expr
   66     | Expr • "/" Expr
   67     | Expr • "%" Expr
   68     | Expr • "?" Expr ":" Expr
   70     | "~" Expr •

    $default  reduce using rule 70 (Expr)


State 35

   54 Expr: "(" Expr • ")"
   55     | Expr • "!=" Expr
   56     | Expr • "==" Expr
   57     | Expr • ">=" Expr
   58     | Expr • ">" Expr
   59     | Expr • "<=" Expr
   60     | Expr • "<" Expr
   61     | Expr • "&&" Expr
   62     | Expr • "||" Expr
   63     | Expr • "+" Expr
   64     | Expr • "-" Expr
   65     | Expr • "*" Expr
   66     | Expr • "/" Expr
   67     | Expr • "%" Expr
   68     | Expr • "?" Expr ":" Expr

    "=="  shift, and go to state 40
    "!="  shift, and go to state 41
    "&&"  shift, and go to state 42
    "||"  shift, and go to state 43
    "<="  shift, and go to state 44
    ">="  shift, and go to state 45
    "+"   shift, and go to state 46
    "-"   shift, and go to state 47
    "*"   shift, and go to state 48
    "/"   shift, and go to state 49
    "%"   shift, and go to state 50
    "<"   shift, and go to state 51
    ">"   shift, and go to state 52
    "?"   shift, and go to state 54
    ")"   shift, and go to state 58


State 36

   52 Expr: "identifier" "(" • ExprList ")"
   53     | "identifier" "(" • ")"

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    ")"           shift, and go to state 59
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    ExprList    go to state 60
    Expr        go to state 61


State 37

   46 IndexExpr: "[" • Expr "]" IndexExpr
   47          | "[" • Expr "]"

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 62


State 38

   43 VarRef: "identifier" IndexExpr •

    $default  reduce using rule 43 (VarRef)


State 39

   45 LvalueExpr: VarRef "=" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 63


State 40

   56 Expr: Expr "==" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 64


State 41

   55 Expr: Expr "!=" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 65


State 42

   61 Expr: Expr "&&" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 66


State 43

   62 Expr: Expr "||" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 67


State 44

   59 Expr: Expr "<=" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 68


State 45

   57 Expr: Expr ">=" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 69


State 46

   63 Expr: Expr "+" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 70


State 47

   64 Expr: Expr "-" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 71


State 48

   65 Expr: Expr "*" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 72


State 49

   66 Expr: Expr "/" • Expr

    "-"           shift, and go to state 18
    "!"           shift, and go to state 19
    "~"           shift, and go to state 20
    "("           shift, and go to state 21
    "identifier"  shift, and go to state 22
    "iconst"      shift, and go to state 23

    VarRef      go to state 24
    LvalueExpr  go to state 25
    Expr        go to state 73


State 50

   67 Expr: Expr "%" • Expr
